[Regression] Building QGIS on MSYS/MinGW with Ninja Generator with CMake 3.26.1
As I have posted in !8346 (merged), Building QGIS started failing after updating Cmake to 3.26.1.
It replaces backward slashes with nothing instead of forward slashes, I tried to revert only 60132272 but It still failing.
for example for example C:\msys64\ucrt64\lib\libQt5Core.dll.a -> C:msys64ucrt64liblibQt5Core.dll.a
QGIS log: https://github.com/qgis/QGIS/actions/runs/4517306883/jobs/7959203173
[2860/10882] Linking CXX shared library output\libqgis_core.dll
FAILED: output/libqgis_core.dll src/core/libqgis_core.dll.a
cmd.exe /C "cd . && ccache C:\msys64\ucrt64\bin\c++.exe -DQWT_POLAR_VERSION=0x060200 -Wall -Wextra -Wno-long-long -Wformat-security -Wno-strict-aliasing -Wnon-virtual-dtor -Wno-redundant-move -Wno-misleading-indentation -Wno-deprecated-copy -shared -o output\libqgis_core.dll -Wl,--out-implib,src\core\libqgis_core.dll.a -Wl,--major-image-version,3,--minor-image-version,31 @CMakeFiles\qgis_core.rsp && cd ."
Edited by Brad King